--- a/index.html
+++ b/index.html
@@ -26,7 +26,18 @@
     <link rel="stylesheet" href="./styles/style.css" />
   </head>
   <body>
-    <h1>Hello</h1>
+    <canvas class="canvas"></canvas>
+    <div class="toolbox">
+      <div>
+        <h1 class="title">ToolBox</h1>
+      </div>
+      <button class="btn dec" id="decrease">-</button>
+      <span class="size">10</span>
+      <button class="btn inc" id="increase">+</button>
+      <input type="color" name="colors" id="color" />
+      <button class="btn clr" id="clear">x</button>
+    </div>
+
     <!-- custom script -->
     <script src="./scripts/script.js"></script>
   </body>
